--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -21,7 +21,7 @@ marketing:
     description: 'Mathematics of Quantum Information Science at IPST.'
     twitter: ''
   analytics:
-    google_analytics: ''
+    google_analytics: 'G-3LHTD9B102'
     baidu_tongji: ''
   verification:
     google: ''
