--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,9 +4,7 @@
 #   The weight parameter defines the order that the links will appear in.
 
 main:
-  # - name: Tour
-  #   url: tour
-  #   weight: 10
+##### About
   - name: About
     weight: 1
   - name: Mission
@@ -18,43 +16,42 @@ main:
   - name: Training
     url: training
     parent: About
+##### Fellowships 
   - name: Fellowships
     weight: 2
+  - name: General Information
+    url: fellowship
+    parent: Fellowships
+    weight: 1
   - name: Undergraduate
     url: undergraduate
     parent: Fellowships
-    weight: 1
+    weight: 2
   - name: Graduate
     url: graduate
     parent: Fellowships
-    weight: 2
+    weight: 3
   - name: Postdoc
     url: postdoc
     parent: Fellowships
-    weight: 3
+    weight: 4
   - name: FAQ
     url: faq
     parent: Fellowships
-    weight: 4
+    weight: 5
+##### People
   - name: People
     url: people
     weight: 3
+##### Events
   - name: Events
     url: event
     weight: 4
+##### News
   - name: News
     url: news
     weight: 5
+##### Contact
   - name: Contact
     url: '#contact'
     weight: 6
-
-  # - name: Outreach
-  #   url: outreach
-  #   weight: 80
-  # - name: Research
-  #   url: research
-  #   weight: 40
-  # - name: Publications
-  #   url: publication
-  #   weight: 50
