--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -24,7 +24,7 @@ marketing:
     google_analytics: 'G-3LHTD9B102'
     baidu_tongji: ''
   verification:
-    google: ''
+    google: '1TsCbReihkWVKbuwvlv5AORFKQsShXzP-7XWcqoZJ4o'
     baidu: ''
 
 # Site header
