Update various pages
Updated the fellowship page to make it a landing page and try to get rid of the dates. Changed mission.md to vision.md and tried to make it a portfolio page

--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,15 +7,18 @@ main:
 ##### About
   - name: About
     weight: 1
-  - name: Mission
-    url: mission
+  - name: Vision
+    url: vision
     parent: About
+    weight: 1
   - name: Research
     url: research
     parent: About
+    weight: 2
   - name: Training
     url: training
     parent: About
+    weight: 3
 ##### Fellowships 
   - name: Fellowships
     weight: 2
